--- a/src/ElasticsearchRecipes/project.json
+++ b/src/ElasticsearchRecipes/project.json
@@ -16,6 +16,7 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics": "1.1.2",
+    "Microsoft.AspNetCore.StaticFilesEx": "1.0.0.4",
     "NEST": "5.4.0"
   },
 
