Removed bin and obj.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .vs
-src/ElasticsearchRecipes/bin
-src/ElasticsearchRecipes/obj
+src\ElasticsearchRecipes\bin
+src\ElasticsearchRecipes\obj
 src/ElasticsearchRecipes/Data
