The DataIndexer now accepts an index as a parameter (no idea why it didn't).

--- a/src/ElasticsearchRecipes/appsettings.json
+++ b/src/ElasticsearchRecipes/appsettings.json
@@ -9,6 +9,6 @@
   },
   "ElasticConnectionSettings": {
     "ClusterUrl": "http://localhost:9200",
-    "Index": "recipes"
+    "DefaultIndex": "recipes"
   }
 }
